k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend 
  ports:
    - protocol: TCP
      port: 3000     
      targetPort: 3000  
  clusterIP: None
